--- a/demo/UI.Service/appsettings.json
+++ b/demo/UI.Service/appsettings.json
@@ -7,10 +7,10 @@
     }
   },
   "AllowedHosts": "*",
-  "AllowOrigins": "https://localhost:44329,http://localhost:8080",
+  "AllowOrigins": "https://localhost:44329,http://localhost:8080,http://localhost:5500",
   "Kafka": {
     "Hub": "kafka/hubService",
-    "Topics": "MyTopic",
+    "Topics": "MyTopic,MyTopic1",
     "GroupId": "myFirstApp",
     "BootstrapServers": "localhost:9092",
     "SecurityProtocol": "PlainText", //Ssl or PlainText
